--- a/Rock Paper Scissors/main.html
+++ b/Rock Paper Scissors/main.html
@@ -1,4 +1,6 @@
 <html>
-<t> Not finished, ill do it later.</t>
-
+  <input type="text" id="input"></input>
+  <button>Submit</button>
+  <script src=/main.js></script>
+  
 </html>
