--- a/Rock Paper Scissors/main.html
+++ b/Rock Paper Scissors/main.html
@@ -1,6 +1,6 @@
 <html>
   <input type="text" id="input"></input>
   <button>Submit</button>
-  <script src=https://void-frost.github.io/Rock Paper Scissors/main.js></script>
+  <script src="https://void-frost.github.io/Rock Paper Scissors/main.js"></script>
   
 </html>
