--- a/Rock Paper Scissors/main.html
+++ b/Rock Paper Scissors/main.html
@@ -1,5 +1,5 @@
 <html>
-  <script src="https://void-frost.github.io/Rock Paper Scissors/main.js"></script>
+  <script src="https://void-frost.github.io/voidfrost/Rock Paper Scissors/main.js"></script>
   <input type="text" id="input"></input>
   <button>Submit</button>
   
