--- a/Rock Paper Scissors/main.html
+++ b/Rock Paper Scissors/main.html
@@ -1,6 +1,6 @@
 <html>
   <script src="https://void-frost.github.io/voidfrost/Rock Paper Scissors/main.js"></script>
   <input type="text" id="input"></input>
-  <button>Submit</button>
+  <button onclick=playGame(document.GetElementByID("input").innerHTML)>Submit</button>
   
 </html>
