--- a/Rock Paper Scissors/main.html
+++ b/Rock Paper Scissors/main.html
@@ -1,7 +1,7 @@
 <html>
   <script src="https://void-frost.github.io/voidfrost/Rock Paper Scissors/main.js"></script>
 <script src="https://void-frost.github.io/voidfrost/Rock Paper Scissors/onclick.js"></script>
+  <h1>Welcome to Rock Paper Scissors. Please put your choice in the box below</h1>
   <input type="text" id="input"></input>
-  <button onclick=playGame(getInput())>Submit</button>
-  
+ <button onclick=playGame(getInput())>Submit</button>
 </html>
