--- a/Rock Paper Scissors/main.html
+++ b/Rock Paper Scissors/main.html
@@ -2,6 +2,10 @@
   <script src="https://void-frost.github.io/voidfrost/Rock Paper Scissors/main.js"></script>
 <script src="https://void-frost.github.io/voidfrost/Rock Paper Scissors/onclick.js"></script>
   <h1>Welcome to Rock Paper Scissors. Please put your choice in the box below</h1>
+  <p> </p>
+  <t id="wins">Wins: 0></t>
+  <t id="losses">Losses: 0</t>
+  <t id="ties">Ties: 0</t>
   <input type="text" id="input"></input>
  <button onclick=playGame(getInput())>Submit</button>
 </html>
