--- a/Rock Paper Scissors/main.html
+++ b/Rock Paper Scissors/main.html
@@ -6,6 +6,7 @@
   <t id="wins">Wins: 0></t>
   <t id="losses">Losses: 0</t>
   <t id="ties">Ties: 0</t>
+  <t id="winner">Winner: None</t>
   <input type="text" id="input"></input>
  <button onclick=playGame(getInput())>Submit</button>
 </html>
