--- a/Rock Paper Scissors/main.html
+++ b/Rock Paper Scissors/main.html
@@ -3,7 +3,7 @@
 <script src="https://void-frost.github.io/voidfrost/Rock Paper Scissors/onclick.js"></script>
   <h1>Welcome to Rock Paper Scissors. Please put your choice in the box below</h1>
   <p> </p>
-  <t id="wins">Wins: 0></t>
+  <t id="wins">Wins: 0</t>
   <t id="losses">Losses: 0</t>
   <t id="ties">Ties: 0</t>
   <t id="winner">Winner: None</t>
