--- a/Rock Paper Scissors/main.html
+++ b/Rock Paper Scissors/main.html
@@ -7,7 +7,7 @@
   <t id="losses">Losses: 0</t>
   <t id="ties">Ties: 0</t>
   <p> </p>
-  <t id="winner">Winner: None</t>
+  <h2 id="winner">Winner: None</h2>
   <p> </p>
   <input type="text" id="input"></input>
  <button onclick=playGame(getInput())>Submit</button>
