--- a/Rock Paper Scissors/main.html
+++ b/Rock Paper Scissors/main.html
@@ -7,6 +7,7 @@
   <t id="losses">Losses: 0</t>
   <t id="ties">Ties: 0</t>
   <p> </p>
+  <h3 id="pcchoice">Computer Choice: None</h3>
   <h2 id="winner">Winner: None</h2>
   <p> </p>
   <input type="text" id="input"></input>
