--- a/Rock Paper Scissors/main.html
+++ b/Rock Paper Scissors/main.html
@@ -2,6 +2,7 @@
   <script src="https://void-frost.github.io/voidfrost/Rock Paper Scissors/main.js"></script>
 <script src="https://void-frost.github.io/voidfrost/Rock Paper Scissors/onclick.js"></script>
   <h1>Welcome to Rock Paper Scissors. Please put your choice in the box below</h1>
+  <t>Side note: The computer DOES NOT process your input, and makes its own choice randomly</t>
   <p> </p>
   <t id="wins">Wins: 0</t>
   <t id="losses">Losses: 0</t>
