--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
-<t>Hey</t>
+<t>Hey. I dump random projects here sometimes.</t>
+  <p> </p>
   <a href="https://void-frost.github.io/voidfrost/Rock%20Paper%20Scissors/main.html">Rock Paper Scissors game
 </html>
