--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <html>
 <t>Hey. I dump random projects here sometimes.</t>
   <p> </p>
-  <a href="https://void-frost.github.io/voidfrost/Rock%20Paper%20Scissors/main.html">Rock Paper Scissors game
+  <a href="https://void-frost.github.io/voidfrost/Rock%20Paper%20Scissors/">Rock Paper Scissors game IN HTML</a>
+    <p> </p>
+      <a href="https://void-frost.github.io/voidfrost/RockPaperScissorsWebGL/">Rock Paper Scissors game IN WEBGL</a>
+  <p> </p>
+  <a href="https://github.com/Void-Frost/voidfrost/raw/master/RockPaperScissorsUnity/Android/RockPaperScissors.apk">Download for ANDROID</a>
+  <p> </p>
+  <a href="https://github.com/Void-Frost/voidfrost/raw/master/RockPaperScissorsUnity/Windows/Rock_Paper_Scissors_Windows.zip">Download for WINDOWS (32 bit)</a>
+  <p> </p>
+  <a href="https://github.com/Void-Frost/voidfrost/raw/master/RockPaperScissorsUnity/Linux/Rock_Paper_Scissors_Linux_x86.zip">Download for LINUX (x86)</a>
+  <p> </p>
+  <a href="https://github.com/Void-Frost/voidfrost/raw/master/RockPaperScissorsUnity/Linux/Rock_Paper_Scissors_Linux_x86_64.zip">Download for LINUX (x86_64)</a>
+  <p> </p>
+  <a href="github.com/Void-Frost/voidfrost">View this github repository (Where all of the code is stored)</a>
 </html>
