--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<t>Hey. I dump random projects here sometimes.</t>
+<t>Welcome to Void Frost's Github.</t>
   <p> </p>
   <a href="https://void-frost.github.io/voidfrost/Rock%20Paper%20Scissors/">Rock Paper Scissors game IN HTML</a>
     <p> </p>
