--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
   <p> </p>
   <a href="https://github.com/Void-Frost/voidfrost/raw/master/RockPaperScissorsUnity/Linux/Rock_Paper_Scissors_Linux_x86_64.zip">Download for LINUX (x86_64)</a>
   <p> </p>
-  <a href="github.com/Void-Frost/voidfrost">View this github repository (Where all of the code is stored)</a>
+  <a href="https://github.com/Void-Frost/voidfrost">View this github repository (Where all of the code is stored)</a>
 </html>
