--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <p> </p>
   <a href="https://github.com/Void-Frost/voidfrost">View this github repository (Where all of the code is stored)</a>
   <p> </p>
-  <video width="640" height="360">
+  <video controls width="640" height="360">
     <source src="https://github.com/Void-Frost/voidfrost/raw/master/Timeline%201.mp4" type=video/mp4>
   </video>
 </html>
