--- a/RockPaperScissorsWebGL/index.html
+++ b/RockPaperScissorsWebGL/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Rock Paper Scissors</title>
-    <link rel="shortcut icon" href="https://void-frost.github.io/voidfrost/RockPaperScissorsWebGL/TemplateData/favicon.ico">
-    <link rel="stylesheet" href="https://void-frost.github.io/voidfrost/RockPaperScissorsWebGL/TemplateData/style.css">
-    <script src="https://void-frost.github.io/voidfrost/RockPaperScissorsWebGL/TemplateData/UnityProgress.js"></script>
-    <script src="https://void-frost.github.io/voidfrost/RockPaperScissorsWebGL/Build/UnityLoader.js"></script>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/style.css">
+    <script src="TemplateData/UnityProgress.js"></script>
+    <script src="Build/UnityLoader.js"></script>
     <script>
-      var unityInstance = UnityLoader.instantiate("unityContainer", "https://void-frost.github.io/voidfrost/RockPaperScissorsWebGL/Build/WebGL.json", {onProgress: UnityProgress});
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/WebGL.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
