--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <p> </p>
   <a href="https://github.com/Void-Frost/voidfrost/raw/master/RockPaperScissorsUnity/Android/RockPaperScissors.apk">Download for ANDROID</a>
   <p> </p>
-  <a href="https://github.com/Void-Frost/voidfrost/raw/master/RockPaperScissorsUnity/Windows/Rock_Paper_Scissors_Windows.zip">Download for WINDOWS (32 bit)</a>
+  <a href="https://github.com/Void-Frost/voidfrost/raw/master/RockPaperScissorsUnity/Windows/RockPaperScissors_Windows_x86.zip">Download for WINDOWS (x86)</a>
+   <p> </p>
+  <a href="https://github.com/Void-Frost/voidfrost/raw/master/RockPaperScissorsUnity/Windows/RockPaperScissors_Windows_x86_64.zip">Download for WINDOWS (x86_64)</a>
   <p> </p>
-  <a href="https://github.com/Void-Frost/voidfrost/raw/master/RockPaperScissorsUnity/Linux/Rock_Paper_Scissors_Linux_x86.zip">Download for LINUX (x86)</a>
+  <a href="https://github.com/Void-Frost/voidfrost/raw/master/RockPaperScissorsUnity/Linux/RockPaperScissors_Linux_x86.zip">Download for LINUX (x86)</a>
   <p> </p>
-  <a href="https://github.com/Void-Frost/voidfrost/raw/master/RockPaperScissorsUnity/Linux/Rock_Paper_Scissors_Linux_x86_64.zip">Download for LINUX (x86_64)</a>
+  <a href="https://github.com/Void-Frost/voidfrost/raw/master/RockPaperScissorsUnity/Linux/RockPaperScissors_Linux_x86_64.zip">Download for LINUX (x86_64)</a>
   <p> </p>
   <a href="https://github.com/Void-Frost/voidfrost">View this github repository (Where all of the code is stored)</a>
   <p> </p>
