--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <t>Welcome to Void Frost's Github.</t>
   <p> </p>
-  <a href="https://void-frost.github.io/voidfrost/Rock%20Paper%20Scissors/">Rock Paper Scissors game Website (HTML/JS, Non-Unity)</a>
+  <a href="https://void-frost.github.io/voidfrost/Rock%20Paper%20Scissors/">Rock Paper Scissors game Website (JavaScript Version)</a>
     <p> </p>
       <a href="https://void-frost.github.io/voidfrost/RockPaperScissorsWebGL/">Rock Paper Scissors game Website (Unity Version)</a>
   <p> </p>
