--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<t>Welcome to Void Frost's Github.</t>
+<h1>Welcome to Void Frost's Github.</h1>
   <p> </p>
   <a href="https://void-frost.github.io/voidfrost/Rock%20Paper%20Scissors/">Rock Paper Scissors game Website (JavaScript Version)</a>
     <p> </p>
