--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <center><h1>Welcome to Void Frost's Github.</h1></center>
   <p> </p>
 <h3>Here, have some links:</h3>
-  <a href="https://void-frost.github.io/Void-Frost/Rock%20Paper%20Scissors/">Rock Paper Scissors game Website (JavaScript Version)</a>
+  <a id="link" href="https://void-frost.github.io/Void-Frost/Rock%20Paper%20Scissors/">Rock Paper Scissors game Website (JavaScript Version)</a>
     <p> </p>
       <a id="link" href="https://void-frost.github.io/Void-Frost/RockPaperScissorsWebGL/">Rock Paper Scissors game Website (Unity Version)</a>
   <p> </p>
